--- a/tests/e2e/configuration/workloads.yaml
+++ b/tests/e2e/configuration/workloads.yaml
@@ -1,7 +1,7 @@
 template_cluster: &template_cluster
   cluster:
     main:
-      args: []
+      args: ["--log-level=TRACE", "--storage-properties-on-edges=True", "--storage-snapshot-interval-sec", "300", "--storage-wal-enabled=True"]
       log_file: "configuration-check-e2e.log"
       setup_queries: []
       validation_queries: []
