--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -75,8 +75,9 @@ target_link_libraries(${test_prefix}bfs_single_node mg-query)
 add_unit_test(cypher_main_visitor.cpp)
 target_link_libraries(${test_prefix}cypher_main_visitor mg-query)
 
-# add_unit_test(interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
-# target_link_libraries(${test_prefix}interpreter mg-communication mg-query)
+add_unit_test(interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
+target_link_libraries(${test_prefix}interpreter mg-communication mg-query)
+
 add_unit_test(plan_pretty_print.cpp)
 target_link_libraries(${test_prefix}plan_pretty_print mg-query)
 
@@ -92,25 +93,28 @@ target_link_libraries(${test_prefix}query_expression_evaluator mg-query)
 add_unit_test(query_plan.cpp)
 target_link_libraries(${test_prefix}query_plan mg-query)
 
-# add_unit_test(query_plan_accumulate_aggregate.cpp)
-# target_link_libraries(${test_prefix}query_plan_accumulate_aggregate mg-query)
+add_unit_test(query_plan_accumulate_aggregate.cpp)
+target_link_libraries(${test_prefix}query_plan_accumulate_aggregate mg-query)
 
-# add_unit_test(query_plan_bag_semantics.cpp)
-# target_link_libraries(${test_prefix}query_plan_bag_semantics mg-query)
+add_unit_test(query_plan_bag_semantics.cpp)
+target_link_libraries(${test_prefix}query_plan_bag_semantics mg-query)
 
-# add_unit_test(query_plan_create_set_remove_delete.cpp)
-# target_link_libraries(${test_prefix}query_plan_create_set_remove_delete mg-query)
-# add_unit_test(query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
-# target_link_libraries(${test_prefix}query_plan_edge_cases mg-communication mg-query)
-# add_unit_test(query_plan_match_filter_return.cpp)
-# target_link_libraries(${test_prefix}query_plan_match_filter_return mg-query)
+add_unit_test(query_plan_create_set_remove_delete.cpp)
+target_link_libraries(${test_prefix}query_plan_create_set_remove_delete mg-query)
+
+add_unit_test(query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
+target_link_libraries(${test_prefix}query_plan_edge_cases mg-communication mg-query)
+
+add_unit_test(query_plan_match_filter_return.cpp)
+target_link_libraries(${test_prefix}query_plan_match_filter_return mg-query)
 
 add_unit_test(query_plan_read_write_typecheck.cpp
   ${CMAKE_SOURCE_DIR}/src/query/plan/read_write_type_checker.cpp)
 target_link_libraries(${test_prefix}query_plan_read_write_typecheck mg-query)
 
-# add_unit_test(query_plan_v2_create_set_remove_delete.cpp)
-# target_link_libraries(${test_prefix}query_plan_v2_create_set_remove_delete mg-query)
+add_unit_test(query_plan_v2_create_set_remove_delete.cpp)
+target_link_libraries(${test_prefix}query_plan_v2_create_set_remove_delete mg-query)
+
 add_unit_test(query_pretty_print.cpp)
 target_link_libraries(${test_prefix}query_pretty_print mg-query)
 
@@ -278,66 +282,76 @@ target_link_libraries(${test_prefix}commit_log_v2 gflags mg-utils mg-storage-v2)
 add_unit_test(property_value_v2.cpp)
 target_link_libraries(${test_prefix}property_value_v2 mg-storage-v2 mg-utils)
 
-# add_unit_test(storage_v2.cpp)
-# target_link_libraries(${test_prefix}storage_v2 mg-storage-v2 storage_test_utils)
+add_unit_test(storage_v2.cpp)
+target_link_libraries(${test_prefix}storage_v2 mg-storage-v2 storage_test_utils)
+
 add_unit_test(storage_v2_constraints.cpp)
 target_link_libraries(${test_prefix}storage_v2_constraints mg-storage-v2)
 
 add_unit_test(storage_v2_decoder_encoder.cpp)
 target_link_libraries(${test_prefix}storage_v2_decoder_encoder mg-storage-v2)
 
-# add_unit_test(storage_v2_durability.cpp)
-# target_link_libraries(${test_prefix}storage_v2_durability mg-storage-v2)
+add_unit_test(storage_v2_durability.cpp)
+target_link_libraries(${test_prefix}storage_v2_durability mg-storage-v2)
 
-# add_unit_test(storage_v2_edge.cpp)
-# target_link_libraries(${test_prefix}storage_v2_edge mg-storage-v2)
+add_unit_test(storage_v2_edge.cpp)
+target_link_libraries(${test_prefix}storage_v2_edge mg-storage-v2)
+
 add_unit_test(storage_v2_gc.cpp)
 target_link_libraries(${test_prefix}storage_v2_gc mg-storage-v2)
 
-# add_unit_test(storage_v2_indices.cpp)
-# target_link_libraries(${test_prefix}storage_v2_indices mg-storage-v2 mg-utils)
+add_unit_test(storage_v2_indices.cpp)
+target_link_libraries(${test_prefix}storage_v2_indices mg-storage-v2 mg-utils)
+
 add_unit_test(storage_v2_name_id_mapper.cpp)
 target_link_libraries(${test_prefix}storage_v2_name_id_mapper mg-storage-v2)
 
 add_unit_test(storage_v2_property_store.cpp)
 target_link_libraries(${test_prefix}storage_v2_property_store mg-storage-v2 fmt)
 
-# add_unit_test(storage_v2_wal_file.cpp)
-# target_link_libraries(${test_prefix}storage_v2_wal_file mg-storage-v2 fmt)
+add_unit_test(storage_v2_wal_file.cpp)
+target_link_libraries(${test_prefix}storage_v2_wal_file mg-storage-v2 fmt)
 
-# add_unit_test(storage_v2_replication.cpp)
-# target_link_libraries(${test_prefix}storage_v2_replication mg-storage-v2 fmt)
+add_unit_test(storage_v2_replication.cpp)
+target_link_libraries(${test_prefix}storage_v2_replication mg-storage-v2 fmt)
+
 add_unit_test(storage_v2_isolation_level.cpp)
 target_link_libraries(${test_prefix}storage_v2_isolation_level mg-storage-v2)
 
 # Test mg-storage-v3
-
 add_unit_test(storage_v3.cpp)
 target_link_libraries(${test_prefix}storage_v3 mg-storage-v3)
 
 add_unit_test(storage_v3_schema.cpp)
-target_link_libraries(${test_prefix}storage_v3_schema mg-storage-v2)
+target_link_libraries(${test_prefix}storage_v3_schema mg-storage-v3)
 
+# Test mg-query-v3
 add_unit_test(interpreter_v2.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
-target_link_libraries(${test_prefix}interpreter_v2 mg-storage-v2 mg-query mg-communication)
+target_link_libraries(${test_prefix}interpreter_v2 mg-storage-v2 mg-query-v2 mg-communication)
 
 add_unit_test(query_v2_query_plan_accumulate_aggregate.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_accumulate_aggregate mg-query)
+target_link_libraries(${test_prefix}query_v2_query_plan_accumulate_aggregate mg-query-v2)
 
 add_unit_test(query_v2_query_plan_create_set_remove_delete.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_create_set_remove_delete mg-query)
+target_link_libraries(${test_prefix}query_v2_query_plan_create_set_remove_delete mg-query-v2)
 
 add_unit_test(query_v2_query_plan_bag_semantics.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_bag_semantics mg-query)
+target_link_libraries(${test_prefix}query_v2_query_plan_bag_semantics mg-query-v2)
 
-add_unit_test(query_v2_query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_edge_cases mg-communication mg-query)
+add_unit_test(query_v2_query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/v2/communication.cpp)
+target_link_libraries(${test_prefix}query_v2_query_plan_edge_cases mg-communication mg-query-v2)
 
 add_unit_test(query_v2_query_plan_v2_create_set_remove_delete.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_v2_create_set_remove_delete mg-query)
+target_link_libraries(${test_prefix}query_v2_query_plan_v2_create_set_remove_delete mg-query-v2)
 
 add_unit_test(query_v2_query_plan_match_filter_return.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_match_filter_return mg-query)
+target_link_libraries(${test_prefix}query_v2_query_plan_match_filter_return mg-query-v2)
+
+add_unit_test(query_v2_cypher_main_visitor.cpp)
+target_link_libraries(${test_prefix}query_v2_cypher_main_visitor mg-query-v2)
+
+add_unit_test(query_v2_query_required_privileges.cpp)
+target_link_libraries(${test_prefix}query_required_privileges mg-query-v2)
 
 add_unit_test(replication_persistence_helper.cpp)
 target_link_libraries(${test_prefix}replication_persistence_helper mg-storage-v2)
