--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -326,8 +326,8 @@ add_unit_test(storage_v3_schema.cpp)
 target_link_libraries(${test_prefix}storage_v3_schema mg-storage-v3)
 
 # Test mg-query-v3
-add_unit_test(interpreter_v2.cpp ${CMAKE_SOURCE_DIR}/src/glue/communication.cpp)
-target_link_libraries(${test_prefix}interpreter_v2 mg-storage-v2 mg-query-v2 mg-communication)
+add_unit_test(query_v2_interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/v2/communication.cpp)
+target_link_libraries(${test_prefix}query_v2_interpreter mg-storage-v3 mg-query-v2 mg-communication)
 
 add_unit_test(query_v2_query_plan_accumulate_aggregate.cpp)
 target_link_libraries(${test_prefix}query_v2_query_plan_accumulate_aggregate mg-query-v2)
