--- a/tests/simulation/CMakeLists.txt
+++ b/tests/simulation/CMakeLists.txt
@@ -30,3 +30,5 @@ add_simulation_test(future.cpp thread)
 add_simulation_test(basic_request.cpp address)
 
 add_simulation_test(trial_query_storage/query_storage_test.cpp address)
+
+add_simulation_test(sharded_map.cpp address)
