--- a/tests/simulation/CMakeLists.txt
+++ b/tests/simulation/CMakeLists.txt
@@ -31,4 +31,4 @@ add_simulation_test(raft.cpp address)
 
 add_simulation_test(trial_query_storage/query_storage_test.cpp address)
 
-add_simulation_test(sharded_map.cpp address)
+#add_simulation_test(sharded_map.cpp address)
