Fix failing tests and simplify expr::pretty_print

--- a/src/query/v2/CMakeLists.txt
+++ b/src/query/v2/CMakeLists.txt
@@ -33,7 +33,7 @@ set(mg_query_v2_sources
     stream/common.cpp
     trigger.cpp
     trigger_context.cpp
-    bindings/typed_value.hpp)
+    bindings/typed_value.cpp)
 
 find_package(Boost REQUIRED)
 
