--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -333,7 +333,7 @@ add_unit_test(query_v2_query_plan_accumulate_aggregate.cpp)
 target_link_libraries(${test_prefix}query_v2_query_plan_accumulate_aggregate mg-query-v2)
 
 add_unit_test(query_v2_query_plan_create_set_remove_delete.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_create_set_remove_delete mg-query-v2)
+target_link_libraries(${test_prefix}query_v2_query_plan_create_set_remove_delete mg-query-v2 mg-expr)
 
 add_unit_test(query_v2_query_plan_bag_semantics.cpp)
 target_link_libraries(${test_prefix}query_v2_query_plan_bag_semantics mg-query-v2)
