--- a/tests/integration/CMakeLists.txt
+++ b/tests/integration/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(transactions)
 add_subdirectory(auth)
 
 # lba test binaries
-add_subdirectory(lba)
+add_subdirectory(fine_grained_access)
 
 ## distributed ha/basic binaries
 #add_subdirectory(ha/basic)
