--- a/tests/e2e/fine_grained_access/workloads.yaml
+++ b/tests/e2e/fine_grained_access/workloads.yaml
@@ -8,6 +8,8 @@ template_cluster: &template_cluster
         [
           "CREATE USER admin IDENTIFIED BY 'test';",
           "CREATE USER user IDENTIFIED BY 'test';",
+          "GRANT ALL PRIVILEGES TO admin;",
+          "GRANT ALL PRIVILEGES TO user;",
           "MERGE (l1:label1 {name: 'test1'});",
           "MERGE (l2:label2  {name: 'test2'});",
           "MATCH (l1:label1),(l2:label2) WHERE l1.name = 'test1' AND l2.name = 'test2' CREATE (l1)-[r:edgeType1]->(l2);",
