--- a/src/query/v2/CMakeLists.txt
+++ b/src/query/v2/CMakeLists.txt
@@ -3,6 +3,7 @@ define_add_lcp(add_lcp_query lcp_query_v2_cpp_files generated_lcp_query_v2_files
 add_lcp_query(frontend/ast/ast.lcp)
 add_lcp_query(frontend/semantic/symbol.lcp)
 add_lcp_query(plan/operator.lcp)
+add_lcp_query(plan/operator_distributed.lcp)
 
 add_custom_target(generate_lcp_query_v2 DEPENDS ${generated_lcp_query_v2_files})
 
@@ -22,6 +23,7 @@ set(mg_query_v2_sources
     interpreter.cpp
     metadata.cpp
     plan/operator.cpp
+    plan/operator_distributed.cpp
     plan/preprocess.cpp
     plan/pretty_print.cpp
     plan/profile.cpp
