--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -334,6 +334,9 @@ target_link_libraries(${test_prefix}storage_v3_property_store mg-storage-v3 fmt)
 add_unit_test(storage_v3_key_store.cpp)
 target_link_libraries(${test_prefix}storage_v3_key_store mg-storage-v3 rapidcheck rapidcheck_gtest)
 
+add_unit_test(storage_v3_gc.cpp)
+target_link_libraries(${test_prefix}storage_v3_gc mg-storage-v3)
+
 # Test mg-query-v3
 add_unit_test(query_v2_interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/v2/communication.cpp)
 target_link_libraries(${test_prefix}query_v2_interpreter mg-storage-v3 mg-query-v2 mg-communication)
