--- a/tests/e2e/fine_grained_access/CMakeLists.txt
+++ b/tests/e2e/fine_grained_access/CMakeLists.txt
@@ -4,3 +4,4 @@ endfunction()
 
 copy_fine_grained_access_e2e_python_files(common.py)
 copy_fine_grained_access_e2e_python_files(edge_type_filtering_tests.py)
+copy_fine_grained_access_e2e_python_files(path_filtering_tests.py)
