--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -70,7 +70,10 @@ target_link_libraries(${test_prefix}mgp_trans_c_api mg-query)
 
 # Test mg-query
 add_unit_test(bfs_single_node.cpp)
-target_link_libraries(${test_prefix}bfs_single_node mg-query)
+target_link_libraries(${test_prefix}bfs_single_node mg-query mg-glue)
+
+add_unit_test(bfs_fine_grained.cpp)
+target_link_libraries(${test_prefix}bfs_fine_grained mg-query mg-glue)
 
 add_unit_test(cypher_main_visitor.cpp)
 target_link_libraries(${test_prefix}cypher_main_visitor mg-query)
