--- a/tests/e2e/lba_procedures/workloads.yaml
+++ b/tests/e2e/lba_procedures/workloads.yaml
@@ -46,6 +46,15 @@ show_privileges_cluster: &show_privileges_cluster
         "Deny Create_Delete On Labels :Label6 to Boris;",
         "Grant Create_Delete On Labels :Label7 to Boris;",
         "Deny Read On Labels :Label7 to Boris;",
+
+        "Create User Niko;",
+        "Grant Auth to Niko;",
+        "Grant Create_Delete On Labels * to Niko",
+        "Deny Update On Labels * to Niko",
+
+        "Create User Bruno;",
+        "Grant Auth to Bruno;",
+        "Deny Create_Delete On Labels * to Bruno"
       ]
 
 workloads:
