--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -337,9 +337,9 @@ target_link_libraries(${test_prefix}storage_v3_key_store mg-storage-v3 rapidchec
 add_unit_test(storage_v3_vertex_accessors.cpp)
 target_link_libraries(${test_prefix}storage_v3_vertex_accessors mg-storage-v3)
 
-# Test mg-query-v3
-# add_unit_test(query_v2_interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/v2/communication.cpp)
-# target_link_libraries(${test_prefix}query_v2_interpreter mg-storage-v3 mg-query-v2 mg-communication)
+# Test mg-query-v2
+add_unit_test(query_v2_interpreter.cpp ${CMAKE_SOURCE_DIR}/src/glue/v2/communication.cpp)
+target_link_libraries(${test_prefix}query_v2_interpreter mg-storage-v3 mg-query-v2 mg-communication)
 
 # add_unit_test(query_v2_query_plan_accumulate_aggregate.cpp)
 # target_link_libraries(${test_prefix}query_v2_query_plan_accumulate_aggregate mg-query-v2)
