Added unit tests for creation of vertex, adding and removing vertex label

--- a/tests/e2e/lba_procedures/CMakeLists.txt
+++ b/tests/e2e/lba_procedures/CMakeLists.txt
@@ -5,5 +5,6 @@ endfunction()
 copy_lba_procedures_e2e_python_files(common.py)
 copy_lba_procedures_e2e_python_files(read_query_modules.py)
 copy_lba_procedures_e2e_python_files(update_query_modules.py)
+copy_lba_procedures_e2e_python_files(create_delete_query_modules.py)
 
 add_subdirectory(procedures)
