Split storage and shards (#519)
- Rename storage to shard
- Add primary label and range for shard
- Remove id_mapper functionality from shard
- Adapt tests

--- a/src/storage/v3/CMakeLists.txt
+++ b/src/storage/v3/CMakeLists.txt
@@ -14,6 +14,7 @@ set(storage_v3_src_files
     vertex_accessor.cpp
     schemas.cpp
     schema_validator.cpp
+    shard.cpp
     storage.cpp)
 
 # #### Replication #####
