--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -325,6 +325,9 @@ target_link_libraries(storage_v3_test_utils mg-storage-v3)
 add_unit_test(storage_v3.cpp)
 target_link_libraries(${test_prefix}storage_v3 mg-storage-v3 storage_v3_test_utils)
 
+add_unit_test(storage_v3_expr.cpp)
+target_link_libraries(${test_prefix}storage_v3_expr mg-storage-v3)
+
 add_unit_test(storage_v3_schema.cpp)
 target_link_libraries(${test_prefix}storage_v3_schema mg-storage-v3)
 
@@ -346,9 +349,8 @@ target_link_libraries(${test_prefix}query_v2_interpreter mg-storage-v3 mg-query-
 
 # # add_unit_test(query_v2_query_plan_create_set_remove_delete.cpp)
 # # target_link_libraries(${test_prefix}query_v2_query_plan_create_set_remove_delete mg-query-v2)
-
-add_unit_test(query_v2_query_plan_bag_semantics.cpp)
-target_link_libraries(${test_prefix}query_v2_query_plan_bag_semantics mg-query-v2)
+# add_unit_test(query_v2_query_plan_bag_semantics.cpp)
+# target_link_libraries(${test_prefix}query_v2_query_plan_bag_semantics mg-query-v2)
 
 # add_unit_test(query_v2_query_plan_edge_cases.cpp ${CMAKE_SOURCE_DIR}/src/glue/v2/communication.cpp)
 # target_link_libraries(${test_prefix}query_v2_query_plan_edge_cases mg-communication mg-query-v2)
